force-app/main/default/objects/Target_Result__c/Target_Result__c.object-meta.xml
<CustomObject>
    <label>Target Result</label>
    <nameField>
        <label>Target Results Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>