force-app/main/default/objects/Target_Result__c/fields/Assessment_Target__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Target__c</fullName>
    <label>Assessment Target</label>
    <referenceTo>Assessment_Target__c</referenceTo>
    <relationshipLabel>Target Results</relationshipLabel>
    <relationshipName>Target_Results</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>