force-app/main/default/objects/Target_Result__c/fields/Is_Started__c.field-meta.xml
<CustomField>
    <fullName>Is_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Started</label>
    <type>Checkbox</type>
</CustomField>