force-app/main/default/objects/Target_Result__c/fields/ResultsJSON__c.field-meta.xml
<CustomField>
    <fullName>ResultsJSON__c</fullName>
    <label>ResultsJSON</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>