force-app/main/default/objects/Target_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Questionnaire__c</columns>
    <columns>Is_Started__c</columns>
    <columns>Is_Completed__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Assessment_Target__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>